tests/e2e/service_output_readonly2.error
Error: syntax error in story at line 3, column 9

3|            server = 2
              ^^^^^^^^

E0100: Can't assign `int` to `Object`
